--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
 <body>
 <h1>Rigorous Evaluation of AI Systems</h1>
-<p>Workshop at AAAI HCOMP 2019 </p>
-
+<p>Workshop at <a href=https://www.humancomputation.com/> The seventh AAAI Conference on Human Computation and Crowdsourcing </a></p>
+<p> Submission Deadline: September 8, 2018 </p>
 <p>The last decade has seen massive progress in AI research powered by crowdsourced datasets and benchmarks such as Imagenet, Freebase, SQuAD; as well as widespread adoption and increasing use of AI in deployed systems. A crucial ingredient is the role of crowdsourcing in operationalizing empirical ways for evaluating, comparing, and assessing the progress.</p>
 <p> The focus of this workshop is not on evaluating AI systems, but on evaluating the quality of evaluations of AI systems. When these evaluations rely on crowdsourced datasets or methodologies, we are interested in the meta-questions around characterization of those methodologies. Some of the expected activities in the workshop include:
 <ul> 
@@ -15,5 +15,27 @@
 <li>Collecting, examining and sharing current evaluation efforts, comprehensive of one system or competitive of multiple systems with the goal of critically evaluating the evaluations themselves</li>
 <li>Developing an open repository of existing evaluations with methodology fully documented and raw data and outcomes available for public scrutiny</li>
 
+
+<h2> Program Committee </h2>
+Matt Lease, UT Austin
+Paul Tepper, Nuance
+Sid Suri, Microsoft
+Danna Gurari, UT Austin
+Anbang Xu, IBM
+Chris Welty, Google
+Lora Aroyo, Google
+Omar Alonso, Microsoft
+Walter Lasecki, Michigan
+Sarah Luger, Orange
+Alex Quinn, Purdue
+Brad Klingenberg, StitchFix
+Ka Wong, Google
+Panos Ipeirotis, NYU
+
+<h3> Organizing Committee </h3>
+Praveen Paritosh
+Kurt Bollacker
+Maria Stone
+Email: rigorous-evaluation@googlegroups.com
 </body>
 </html>
