--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html>	
 <title> Rigorous Evaluation of AI Systems 2019 Workshop at AAAI HCOMP </title>
 
-<body>
-<h1>Rigorous Evaluation of AI Systems</h1>
+<body bgcolor="FFE5CC">
+<h1>Rigorous Evaluation of AI Systems 2019</h1>
 <p>Workshop at <a href=https://www.humancomputation.com/> The seventh AAAI Conference on Human Computation and Crowdsourcing </a></p>
 <p> Submission Deadline: September 8, 2018 </p>
 <p>The last decade has seen massive progress in AI research powered by crowdsourced datasets and benchmarks such as Imagenet, Freebase, SQuAD; as well as widespread adoption and increasing use of AI in deployed systems. A crucial ingredient is the role of crowdsourcing in operationalizing empirical ways for evaluating, comparing, and assessing the progress.</p>
