--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <title> Rigorous Evaluation of AI Systems 2019 Workshop at AAAI HCOMP </title>
 
 <body bgcolor="FFE5CC">
-<h1>Rigorous Evaluation of AI Systems 2019</h1>
+<h1>Rigorous Evaluation of AI Systems 2018</h1>
 <p>Workshop at <a href=https://www.humancomputation.com/> The seventh AAAI Conference on Human Computation and Crowdsourcing </a></p>
 <p> Submission Deadline: September 8, 2018 </p>
+<p> <a href="https://easychair.org/cfp/reais19"> Call for papers </a></p>
+
 <p>The last decade has seen massive progress in AI research powered by crowdsourced datasets and benchmarks such as Imagenet, Freebase, SQuAD; as well as widespread adoption and increasing use of AI in deployed systems. A crucial ingredient is the role of crowdsourcing in operationalizing empirical ways for evaluating, comparing, and assessing the progress.</p>
 <p> The focus of this workshop is not on evaluating AI systems, but on evaluating the quality of evaluations of AI systems. When these evaluations rely on crowdsourced datasets or methodologies, we are interested in the meta-questions around characterization of those methodologies. Some of the expected activities in the workshop include:
 <ul> 
