--- a/aaai-2020/index.html
+++ b/aaai-2020/index.html
@@ -3,10 +3,13 @@
 <html>	
 <title> Evaluating Evaluation of AI Systems (Meta-Eval 2020) </title>
 
-<body bgcolor="FFE5CC">
+<body bgcolor="DD6632">
 <h1>Evaluating Evaluation of AI Systems (Meta-Eval 2020)</h1>
-<p>Workshop at <a href=https://www.humancomputation.com/> The seventh AAAI Conference on Human Computation and Crowdsourcing </a></p>
-<p><b> Submission Deadline: September 8, 2019 </b></p>
+<p>Workshop at <a href=https://www.humancomputation.com/> The thirty fourth AAAI Conference on Artificial Intelligence </a></p>
+<p><b> Submission Deadline: November 22, 2019 </b></p>
+<p><b> Notification of acceptance: December 11, 2019 </b></p>
+<p><b> Final camera-ready papers due: December 18, 2019 </b></p>
+
 <p> <a href="https://easychair.org/cfp/reais19"> Call for papers </a></p>
 <h2> <a href="https://easychair.org/conferences/?conf=reais19"> Submission Link </a></h2>
 
@@ -74,6 +77,7 @@ We invite scientific contributions and positions papers on the following topics:
 <li>Praveen Paritosh</li>
 <li>Kurt Bollacker</li>
 <li>Maria Stone</li>
+<li>Lora Aroyo</li>
 </ul>
 Email: rigorous-evaluation AT googlegroups.com
 </body>
