--- a/aaai-2020/index.html
+++ b/aaai-2020/index.html
@@ -3,7 +3,7 @@
 <html>	
 <title> Evaluating Evaluation of AI Systems (Meta-Eval 2020) </title>
 
-<body bgcolor="DD6632">
+<body bgcolor="ccffff">
 <h1>Evaluating Evaluation of AI Systems (Meta-Eval 2020)</h1>
 <p>Workshop at <a href=https://www.humancomputation.com/> The thirty fourth AAAI Conference on Artificial Intelligence </a></p>
 <p><b> Submission Deadline: November 22, 2019 </b></p>
