--- a/aaai-2020/index.html
+++ b/aaai-2020/index.html
@@ -5,7 +5,7 @@
 
 <body bgcolor="ccffff">
 <h1>Evaluating Evaluation of AI Systems (Meta-Eval 2020)</h1>
-<p>Workshop at <a href=https://www.humancomputation.com/> The thirty fourth AAAI Conference on Artificial Intelligence </a></p>
+<p>Workshop at <a href=https://aaai.org/Conferences/AAAI-20/> The thirty fourth AAAI Conference on Artificial Intelligence </a></p>
 <p><b> Submission Deadline: November 27, 2019 </b></p>
 <p><b> Notification of acceptance: December 13, 2019 </b></p>
 <p><b> Final camera-ready papers due: December 18, 2019 </b></p>
@@ -74,10 +74,10 @@ We invite scientific contributions and positions papers on the following topics:
 
 <h3> Organizing Committee </h3>
 <ul>
-<li>Praveen Paritosh</li>
-<li>Kurt Bollacker</li>
-<li>Maria Stone</li>
-<li>Lora Aroyo</li>
+<li>Praveen Paritosh, Google</li>
+<li>Kurt Bollacke, Long Now Foundationr</li>
+<li>Maria Stone, Spotify</li>
+<li>Lora Aroyo, Google</li>
 </ul>
 Email: rigorous-evaluation AT googlegroups.com
 </body>
