--- a/aaai-2020/index.html
+++ b/aaai-2020/index.html
@@ -78,6 +78,7 @@ We invite scientific contributions and positions papers on the following topics:
 <li>Kurt Bollacke, Long Now Foundationr</li>
 <li>Maria Stone, Spotify</li>
 <li>Lora Aroyo, Google</li>
+<li>Sarah Luger, Orange</li>
 </ul>
 Email: rigorous-evaluation AT googlegroups.com
 </body>
