--- a/aaai-2020/index.html
+++ b/aaai-2020/index.html
@@ -3,8 +3,8 @@
 <html>	
 <title> Evaluating Evaluation of AI Systems (Meta-Eval 2020) </title>
 
-<body bgcolor="ccffff">
-<h1>Evaluating Evaluation of AI Systems (Meta-Eval 2020)</h1>
+<body bgcolor="ffffff">
+  <h1><font face="arial">Evaluating Evaluation of AI Systems (Meta-Eval 2020)</font></h1>
 <p>Workshop at <a href=https://aaai.org/Conferences/AAAI-20/> The thirty fourth AAAI Conference on Artificial Intelligence </a></p>
 <p><b> Submission Deadline: November 27, 2019 </b></p>
 <p><b> Notification of acceptance: December 13, 2019 </b></p>
