--- a/aaai-2020/index.html
+++ b/aaai-2020/index.html
@@ -4,17 +4,18 @@
 <title> Evaluating Evaluation of AI Systems (Meta-Eval 2020) </title>
 
 <body bgcolor="ffffff">
-  <h1><font face="arial">Evaluating Evaluation of AI Systems (Meta-Eval 2020)</font></h1>
+  <p style = "font-family:arial;font-size:12px;font-style:normal;">
+  <h1>Evaluating Evaluation of AI Systems (Meta-Eval 2020)</h1>
 <p>Workshop at <a href=https://aaai.org/Conferences/AAAI-20/> The thirty fourth AAAI Conference on Artificial Intelligence </a></p>
 <p><b> Submission Deadline: November 27, 2019 </b></p>
-<p><b> Notification of acceptance: December 13, 2019 </b></p>
+<p><<b> Notification of acceptance: December 13, 2019 </b></p>
 <p><b> Final camera-ready papers due: December 18, 2019 </b></p>
 
-<p> <a href="https://easychair.org/cfp/reais19"> Call for papers </a></p>
-<h2> <a href="https://easychair.org/conferences/?conf=reais19"> Submission Link </a></h2>
+<p><a href="https://easychair.org/cfp/reais19"> Call for papers </a></p>
+<h2><a href="https://easychair.org/conferences/?conf=reais19"> Submission Link </a></h2>
 
 <p>The last decade has seen massive progress in AI research powered by crowdsourced datasets and benchmarks such as Imagenet, Freebase, SQuAD; as well as widespread adoption and increasing use of AI in deployed systems. A crucial ingredient is the role of crowdsourcing in operationalizing empirical ways for evaluating, comparing, and assessing the progress.</p>
-<p> The focus of this workshop is not on evaluating AI systems, but on evaluating the quality of evaluations of AI systems. When these evaluations rely on crowdsourced datasets or methodologies, we are interested in the meta-questions around characterization of those methodologies. Some of the expected activities in the workshop include:
+<p>The focus of this workshop is not on evaluating AI systems, but on evaluating the quality of evaluations of AI systems. When these evaluations rely on crowdsourced datasets or methodologies, we are interested in the meta-questions around characterization of those methodologies. Some of the expected activities in the workshop include:
 <ul> 
 <li>Asking the question of "what makes evaluations good'?</li>
 <li>Defining "what good looks like" in evaluations of different types of AI systems (image recognition, recommender systems, search, voice assistants, etc).</li>
