--- a/aaai-2020/index.html
+++ b/aaai-2020/index.html
@@ -3,12 +3,12 @@
 <html>	
 <title> Evaluating Evaluation of AI Systems (Meta-Eval 2020) </title>
 
-<body bgcolor="ffffff">
-  <p style = "font-family:arial;font-size:12px;font-style:normal;">
+<body bgcolor="ffffff" style = "font-family:arial;font-size:12px;font-style:normal;">
+  
   <h1>Evaluating Evaluation of AI Systems (Meta-Eval 2020)</h1>
 <p>Workshop at <a href=https://aaai.org/Conferences/AAAI-20/> The thirty fourth AAAI Conference on Artificial Intelligence </a></p>
 <p><b> Submission Deadline: November 27, 2019 </b></p>
-<p><<b> Notification of acceptance: December 13, 2019 </b></p>
+<p><b> Notification of acceptance: December 13, 2019 </b></p>
 <p><b> Final camera-ready papers due: December 18, 2019 </b></p>
 
 <p><a href="https://easychair.org/cfp/reais19"> Call for papers </a></p>
