--- a/aaai-2020/index.html
+++ b/aaai-2020/index.html
@@ -7,12 +7,6 @@
   
   <h1>Evaluating Evaluation of AI Systems (Meta-Eval 2020)</h1>
 <p>Workshop at <a href=https://aaai.org/Conferences/AAAI-20/> The thirty fourth AAAI Conference on Artificial Intelligence </a></p>
-<p><b> Submission Deadline: November 27, 2019 </b></p>
-<p><b> Notification of acceptance: December 13, 2019 </b></p>
-<p><b> Final camera-ready papers due: December 18, 2019 </b></p>
-
-<p><a href="https://easychair.org/cfp/reais19"> Call for papers </a></p>
-<h2><a href="https://easychair.org/conferences/?conf=reais19"> Submission Link </a></h2>
 
 <p>The last decade has seen massive progress in AI research powered by crowdsourced datasets and benchmarks such as Imagenet, Freebase, SQuAD; as well as widespread adoption and increasing use of AI in deployed systems. A crucial ingredient is the role of crowdsourcing in operationalizing empirical ways for evaluating, comparing, and assessing the progress.</p>
 <p>The focus of this workshop is not on evaluating AI systems, but on evaluating the quality of evaluations of AI systems. When these evaluations rely on crowdsourced datasets or methodologies, we are interested in the meta-questions around characterization of those methodologies. Some of the expected activities in the workshop include:
@@ -55,6 +49,14 @@ We invite scientific contributions and positions papers on the following topics:
 <li>What can we learn from other systematic evaluation efforts and communities such as TREC, SIGIR, etc.?</li>
 </ul>
 </ul>
+
+<p><b> Submission Deadline: November 27, 2019 </b></p>
+<p><b> Notification of acceptance: December 13, 2019 </b></p>
+<p><b> Final camera-ready papers due: December 18, 2019 </b></p>
+
+<p><a href="https://easychair.org/cfp/reais19"> Call for papers </a></p>
+<p><a href="https://easychair.org/conferences/?conf=reais19"> Submission Link </a></p>
+
 <h2> Program Committee </h2>
 <ul>
 <li>Matt Lease, UT Austin </li>
@@ -73,7 +75,7 @@ We invite scientific contributions and positions papers on the following topics:
 <li>Panos Ipeirotis, NYU</li>
 </ul>
 
-<h3> Organizing Committee </h3>
+<h2> Organizing Committee </h2>
 <ul>
 <li>Praveen Paritosh, Google</li>
 <li>Kurt Bollacke, Long Now Foundationr</li>
