--- a/aaai-2020/index.html
+++ b/aaai-2020/index.html
@@ -10,7 +10,7 @@
 <p>Date: 8 Feb 2020 </p>
 <p>Location: Hilton New York Midtown (Conference Venue)</p>
 
-<h2> Program </h2>
+<h2> <a href=http://eval.how/aaai-2020/program.html> Program </a></h2>
 
 <p>The last decade has seen massive progress in AI research powered by crowdsourced datasets and benchmarks such as Imagenet, Freebase, SQuAD; as well as widespread adoption and increasing use of AI in deployed systems. A crucial ingredient is the role of crowdsourcing in operationalizing empirical ways for evaluating, comparing, and assessing the progress.</p>
 <p>The focus of this workshop is not on evaluating AI systems, but on evaluating the quality of evaluations of AI systems. When these evaluations rely on crowdsourced datasets or methodologies, we are interested in the meta-questions around characterization of those methodologies. Some of the expected activities in the workshop include:
