--- a/aaai-2020/index.html
+++ b/aaai-2020/index.html
@@ -9,6 +9,7 @@
 <p>Workshop at <a href=https://aaai.org/Conferences/AAAI-20/> The thirty fourth AAAI Conference on Artificial Intelligence </a></p>
 <p>Date: 8 Feb 2020 </p>
 <p>Location: Hilton New York Midtown (Conference Venue)</p>
+<p> <a href=http://eval.how/aaai-2020/> Workshop Website</a></p>
 
 <h2> <a href=http://eval.how/aaai-2020/program.html> Program </a></h2>
 
