--- a/aaai-2020/index.html
+++ b/aaai-2020/index.html
@@ -7,9 +7,9 @@
   
 <h1>Evaluating Evaluation of AI Systems (Meta-Eval 2020)</h1>
 <p>Workshop at <a href=https://aaai.org/Conferences/AAAI-20/> The thirty fourth AAAI Conference on Artificial Intelligence </a></p>
-<p>Date: 8 Feb 2020 </p>
-<p>Location: Hilton New York Midtown (Conference Venue)</p>
-<p> <a href=http://eval.how/aaai-2020/> Workshop Website</a></p>
+<p><b>Date:</b> 8 Feb 2020 </p>
+<p><b>Location:</b> Hilton New York Midtown (Conference Venue)</p>
+<p><b> <a href=http://eval.how/aaai-2020/> Workshop Website</a></b></p>
 
 <h2> <a href=http://eval.how/aaai-2020/program.html> Program </a></h2>
 
