--- a/aaai-2020/program.html
+++ b/aaai-2020/program.html
@@ -14,31 +14,31 @@
 <h2> Program </h2>
 <ul>
 <li>9:15 - 9:30 Intro</li>
-<li>9:30 - 10:30 Invited Talk: Anna Rogers</li> 
+  <li><b>9:30 - 10:30 Invited Talk: Anna Rogers</b></li> 
 <li>10:30 - 11:00 Coffee Break</li>
-<li>11:00 - 12:00 Paper Session 1</li>
+  <li><b>11:00 - 12:00 Paper Session 1</b></li>
 <ul>
-<li>11:00 - 11:15: Jose Hernandez-Orallo: AI Evaluation: On Broken Yardsticks and Measurement Scales</li>
-<li>11:15 - 11:30: Christopher Pereyda and Lawrence Holder: Measuring the Relative Similarity and Difficulty Between AI Benchmark Problems</li>
-<li>11:30 - 11:45: Azamat Kamzin, Prajwal Paudyal, Ayan Banerjee and Sandeep K.S. Gupta: Evaluating the gap between hype and performance of AI systems</li>
-<li>11:45 - 12:00: Chris Welty, Praveen Paritosh, Lora Aroyo: Metrology for AI: From Benchmarks to Instruments</li>
+<li>11:00 - 11:15: Jose Hernandez-Orallo: <b>AI Evaluation: On Broken Yardsticks and Measurement Scales</b></li>
+<li>11:15 - 11:30: Christopher Pereyda and Lawrence Holder: <b>Measuring the Relative Similarity and Difficulty Between AI Benchmark Problems</b></li>
+<li>11:30 - 11:45: Azamat Kamzin, Prajwal Paudyal, Ayan Banerjee and Sandeep K.S. Gupta: <b>Evaluating the gap between hype and performance of AI systems</b></li>
+<li>11:45 - 12:00: Chris Welty, Praveen Paritosh, Lora Aroyo: <b>Metrology for AI: From Benchmarks to Instruments</b></li>
 </ul>
-<li>12:00 - 13:00 Invited Talk: </li>
+  <li><b>12:00 - 13:00 Invited Talk: TBC </b></li>
 <li>13:00 - 14:00 Lunch</li>
 <li>14:00 - 14:30 Paper Session 2</li>
 <ul>
-<li>14:00 - 14:15: Botty Dimanov, Umang Bhatt, Mateja Jamnik and Adrian Weller: You Shouldn't Trust Me: Learning Models Which Conceal Unfairness From Multiple Explanation Methods</li>	
-<li>14:15 - 14:30: Inioluwa Raji and Genevieve Fried: About Face: Tracking Shifting Trends of Facial Recognition Evaluation</li>
+<li>14:00 - 14:15: Botty Dimanov, Umang Bhatt, Mateja Jamnik and Adrian Weller: <b>You Shouldn't Trust Me: Learning Models Which Conceal Unfairness From Multiple Explanation Methods</b></li>	
+<li>14:15 - 14:30: Inioluwa Raji and Genevieve Fried: <b>About Face: Tracking Shifting Trends of Facial Recognition Evaluation</b></li>
 </ul>
-<li>14:30 - 15:30 Invited Talk: Amazon A2I Team - Humans and AI</li>
+  <li><b>14:30 - 15:30 Invited Talk: Amazon A2I Team - Humans and AI</b></li>
 <li>15:30 - 16:00 Coffee break (Town Hall meeting)</li>
 <li>16:00 - 16:45 Paper Session 3</li>
 <ul>
-<li>16:00 - 16:15: Stefano Alletto, Shenyang Huang, Vincent Francois-Lavet, Yohei Nakata and Guillaume Rabusseau: RandomNet: Towards Fully Automatic Neural Architecture Design for Multimodal Learning</li>
-<li>16:15 - 16:30: Julian Niedermeier, Goncalo Mordido and Christoph Meinel: Improving the Evaluation of Generative Models with Fuzzy Logic</li>
-<li>16:30 - 16:45: Huiyuan Xie, Tom Sherborne, Alexander Kuhnle and Ann Copestake: Going Beneath the Surface: Evaluating Image Captioning for Grammaticality, Truthfulness and Diversity</li>
+<li>16:00 - 16:15: Stefano Alletto, Shenyang Huang, Vincent Francois-Lavet, Yohei Nakata and Guillaume Rabusseau: <b>RandomNet: Towards Fully Automatic Neural Architecture Design for Multimodal Learning</b></li>
+<li>16:15 - 16:30: Julian Niedermeier, Goncalo Mordido and Christoph Meinel: <b>Improving the Evaluation of Generative Models with Fuzzy Logic</b></li>
+<li>16:30 - 16:45: Huiyuan Xie, Tom Sherborne, Alexander Kuhnle and Ann Copestake: <b>Going Beneath the Surface: Evaluating Image Captioning for Grammaticality, Truthfulness and Diversity</b></li>
 </ul>
-<li>16:45 - 17:30 Panel: Industry Perspectives</li>
+  <li><b>16:45 - 17:30 Panel: Industry Perspectives</b></li>
 </ul>
 
 
