--- a/aaai-2020/program.html
+++ b/aaai-2020/program.html
@@ -25,14 +25,14 @@
 </ul>
   <li><b>12:00 - 13:00 Invited Talk: TBC </b></li>
 <li>13:00 - 14:00 Lunch</li>
-<li>14:00 - 14:30 Paper Session 2</li>
+  <li><b>14:00 - 14:30 Paper Session 2</b></li>
 <ul>
 <li>14:00 - 14:15: Botty Dimanov, Umang Bhatt, Mateja Jamnik and Adrian Weller: <b>You Shouldn't Trust Me: Learning Models Which Conceal Unfairness From Multiple Explanation Methods</b></li>	
 <li>14:15 - 14:30: Inioluwa Raji and Genevieve Fried: <b>About Face: Tracking Shifting Trends of Facial Recognition Evaluation</b></li>
 </ul>
   <li><b>14:30 - 15:30 Invited Talk: Amazon A2I Team - Humans and AI</b></li>
 <li>15:30 - 16:00 Coffee break (Town Hall meeting)</li>
-<li>16:00 - 16:45 Paper Session 3</li>
+  <li><b>16:00 - 16:45 Paper Session 3</b></li>
 <ul>
 <li>16:00 - 16:15: Stefano Alletto, Shenyang Huang, Vincent Francois-Lavet, Yohei Nakata and Guillaume Rabusseau: <b>RandomNet: Towards Fully Automatic Neural Architecture Design for Multimodal Learning</b></li>
 <li>16:15 - 16:30: Julian Niedermeier, Goncalo Mordido and Christoph Meinel: <b>Improving the Evaluation of Generative Models with Fuzzy Logic</b></li>
