--- a/aaai-2020/program.html
+++ b/aaai-2020/program.html
@@ -18,9 +18,9 @@
 <li>10:30 - 11:00 Coffee Break</li>
   <li><b>11:00 - 12:00 Paper Session 1</b></li>
 <ul>
-<li>11:00 - 11:15: Jose Hernandez-Orallo: <b><a href=http://eval.how/aaai-2020/REAIS19_paper_14.pdf>AI Evaluation: On Broken Yardsticks and Measurement Scales</a></b></li>
-<li>11:15 - 11:30: Christopher Pereyda and Lawrence Holder: <b><a href=http://eval.how/aaai-2020/REAIS19_paper_8 (3).pdf>Measuring the Relative Similarity and Difficulty Between AI Benchmark Problems</a></b></li>
-<li>11:30 - 11:45: Azamat Kamzin, Prajwal Paudyal, Ayan Banerjee and Sandeep K.S. Gupta: <b><a href=http://eval.how/aaai-2020/REAIS19_paper_13.pdf>Evaluating the gap between hype and performance of AI systems</a></b></li>
+<li>11:00 - 11:15: Jose Hernandez-Orallo: <b><a href=http://eval.how/aaai-2020/REAIS19_p14.pdf>AI Evaluation: On Broken Yardsticks and Measurement Scales</a></b></li>
+<li>11:15 - 11:30: Christopher Pereyda and Lawrence Holder: <b><a href=http://eval.how/aaai-2020/REAIS19_p8.pdf>Measuring the Relative Similarity and Difficulty Between AI Benchmark Problems</a></b></li>
+<li>11:30 - 11:45: Azamat Kamzin, Prajwal Paudyal, Ayan Banerjee and Sandeep K.S. Gupta: <b><a href=http://eval.how/aaai-2020/REAIS19_p13.pdf>Evaluating the gap between hype and performance of AI systems</a></b></li>
 <li>11:45 - 12:00: Chris Welty, Praveen Paritosh, Lora Aroyo: <b><a href=https://arxiv.org/abs/1911.01875>Metrology for AI: From Benchmarks to Instruments</a></b></li>
 </ul>
   <li><b>12:00 - 13:00 Invited Talk: TBC </b></li>
