--- a/aaai-2020/keynotes.html
+++ b/aaai-2020/keynotes.html
@@ -13,6 +13,7 @@
 
 <h2> Keynote Speakers </h2>
 <h3> <a href=https://www.cs.uml.edu/~arogers/>Anna Rogers</a></h3>
+<p><img src="anna_rogers.jpg" alt="Anna Rogers IMG" style="float:left;width:42px;height:42px;"></p>
 <ul>
 <li> <b>Title:</b> The questions that the current AI can't answer. </li>
 <li> <b>Abstract:</b> NLP is witnessing an explosion of question answering datasets, most of which get "solved" within months of publication. However, that does not necessarily mean that we are making fast progress towards machine language understanding. I discuss the current proposals for making the datasets more difficult, and the ways in which the current deep learning models "cheat", avoiding the complex verbal reasoning we expect them to perform.</li>
