--- a/aaai-2020/keynotes.html
+++ b/aaai-2020/keynotes.html
@@ -27,7 +27,7 @@
 <li> <b>Bio:</b> </li>
 </ul>
 
-<h3> Amazon A2I Team </h3>
+<h3> Amazon Augmented AI (Amazon A2I) </h3>
 <ul>
 <li> <b>Title:</b> Humans and AI. </li>
 <li> <b>Abstract:</b> </li>
