--- a/aaai-2020/program.html
+++ b/aaai-2020/program.html
@@ -38,7 +38,13 @@
 <li>16:15 - 16:30: Julian Niedermeier, Goncalo Mordido and Christoph Meinel: <b><a href=http://eval.how/aaai-2020/REAIS19_p10.pdf>Improving the Evaluation of Generative Models with Fuzzy Logic</a></b></li>
 <li>16:30 - 16:45: Huiyuan Xie, Tom Sherborne, Alexander Kuhnle and Ann Copestake: <b><a href=http://eval.how/aaai-2020/REAIS19_p11.pdf>Going Beneath the Surface: Evaluating Image Captioning for Grammaticality, Truthfulness and Diversity</a></b></li>
 </ul>
-  <li><b>16:45 - 17:30 Panel: Industry Perspectives</b></li>
+  <li><b>16:45 - 17:30 Panel: Perspectives on Self-Evaluation</b>: Should researchers, groups, companies evaluate their own work, or is a more adversarial approach necessary to achieve evaluation quality?</li>
+  <ul>
+    <li>Chair: Chris Welty (Google)</li>
+    <li>Participants: [TBA]</li>
+    <li>Topics: [TBA] </li>
+  </ul>
+
 </ul>
 
 
