--- a/aaai-2020/program.html
+++ b/aaai-2020/program.html
@@ -30,7 +30,7 @@
 <li>14:00 - 14:15: Botty Dimanov, Umang Bhatt, Mateja Jamnik and Adrian Weller: <b><a href=http://eval.how/aaai-2020/REAIS19_p7.pdf>You Shouldn't Trust Me: Learning Models Which Conceal Unfairness From Multiple Explanation Methods</a></b></li>	
 <li>14:15 - 14:30: Inioluwa Raji and Genevieve Fried: <b><a href=http://eval.how/aaai-2020/REAIS19_p12.pdf>About Face: Tracking Shifting Trends of Facial Recognition Evaluation</a></b></li>
 </ul>
-  <li><b>14:30 - 15:30 Invited Talk: <a href=http://eval.how/aaai-2020/keynotes.html>Amazon A2I Team - Humans and AI</a></b></li>
+  <li><b>14:30 - 15:30 Invited Talk: <a href=http://eval.how/aaai-2020/keynotes.html>Amazon A2I Team - People + AI = Magic</a></b></li>
 <li>15:30 - 16:00 Coffee break (Town Hall meeting)</li>
   <li><b>16:00 - 16:45 Paper Session 3</b></li>
 <ul>
