--- a/aaai-2020/keynotes.html
+++ b/aaai-2020/keynotes.html
@@ -29,9 +29,13 @@
 
 <h3> Amazon Augmented AI (Amazon A2I) </h3>
 <ul>
-<li> <b>Title:</b> Humans and AI. </li>
-<li> <b>Abstract:</b> </li>
-<li> <b>Bio:</b> </li>
+  <li>Warren Barkley, General Manager for Amazon A2I</li>
+  <li>Morgan Dutton is a Program Manager for Amazon A2I</li>
+</ul>
+<ul>
+<li> <b>Title:</b> People + AI = Magic </li>
+<li> <b>Abstract:</b>We will share new innovations in machine learning accuracy and the importance of maintaining people in the loop for AI applications. Many machine learning solutions require humans to review low confidence inference for accuracy, audit or compliance. We will demonstrate new mechanisms for bringing nuanced human inputs into the ML workflow which will enable sectors which had previously relied solely on humans or could not use ML at all.</li>
+<li> <b>Bio:</b>AWS A2I is an organization within the AI/ML division of AWS that is focused on accelerating ML deployment and improving model accuracy. </li>
 </ul>
 
 
