--- a/aaai-2020/keynotes.html
+++ b/aaai-2020/keynotes.html
@@ -27,7 +27,7 @@
 <li> <b>Bio:</b> </li>
 </ul>
 
-<h3> <a href=https://aws.amazon.com/augmented-ai/ Amazon Augmented AI (Amazon A2I) </a></h3>
+<h3> <a href=https://aws.amazon.com/augmented-ai/> Amazon Augmented AI (Amazon A2I) </a></h3>
 <ul>
   <li>Warren Barkley, General Manager for Amazon A2I</li>
   <li>Morgan Dutton is a Program Manager for Amazon A2I</li>
