--- a/aaai-2020/program.html
+++ b/aaai-2020/program.html
@@ -23,7 +23,7 @@
 <li>11:30 - 11:45: Azamat Kamzin, Prajwal Paudyal, Ayan Banerjee and Sandeep K.S. Gupta: <b><a href=http://eval.how/aaai-2020/REAIS19_p13.pdf>Evaluating the gap between hype and performance of AI systems</a></b></li>
 <li>11:45 - 12:00: Chris Welty, Praveen Paritosh, Lora Aroyo: <b><a href=https://arxiv.org/abs/1911.01875>Metrology for AI: From Benchmarks to Instruments</a></b></li>
 </ul>
-  <li><b>12:00 - 13:00 Invited Talk: <a href=http://eval.how/aaai-2020/keynotes.html>TBC </a></b></li>
+  <li><b>12:00 - 13:00 Invited Talk: <a href=http://eval.how/aaai-2020/keynotes.html>Odd Erik Gunderson, Reproducibility in AI </a></b></li>
 <li>13:00 - 14:00 Lunch</li>
   <li><b>14:00 - 14:30 Paper Session 2</b></li>
 <ul>
