--- a/aaai-2020/keynotes.html
+++ b/aaai-2020/keynotes.html
@@ -20,11 +20,9 @@
 <li> <b>Bio:</b> Anna Rogers is a post-doctoral associate at University of Massachusetts (Lowell). Her research focuses on representation learning, natural language understanding, evaluation methodology for NLP, and computational social science. </li>
 </ul>
 
-<h3> Speaker 2</h3>
+<h3> Odd Erik Gunderson</h3>
 <ul>
-<li> <b>Title:</b> </li>
-<li> <b>Abstract:</b> </li>
-<li> <b>Bio:</b> </li>
+<li> <b>Title:</b> Reproducibility in AI </li>
 </ul>
 
 <h3> <a href=https://aws.amazon.com/augmented-ai/> Amazon Augmented AI (Amazon A2I) </a></h3>
