--- a/aaai-2020/keynotes.html
+++ b/aaai-2020/keynotes.html
@@ -20,7 +20,7 @@
 <li> <b>Bio:</b> Anna Rogers is a post-doctoral associate at University of Massachusetts (Lowell). Her research focuses on representation learning, natural language understanding, evaluation methodology for NLP, and computational social science. </li>
 </ul>
 
-<h3> Odd Erik Gunderson</h3>
+<h3> <a href=https://www.ntnu.edu/employees/odderik> Odd Erik Gunderson </a></h3>
 <ul>
 <li> <b>Title:</b> Reproducibility in AI </li>
 </ul>
