--- a/aaai-2020/keynotes.html
+++ b/aaai-2020/keynotes.html
@@ -21,6 +21,8 @@
 </ul>
 
 <h3> <a href=https://www.ntnu.edu/employees/odderik> Odd Erik Gunderson </a></h3>
+<p><img src="odderik.jpg" alt="Odd Erik Gunderson IMG" style="width:100px;height:130px;"></p>
+
 <ul>
 <li> <b>Title:</b> Reproducibility in AI </li>
 </ul>
