--- a/aaai-2020/keynotes.html
+++ b/aaai-2020/keynotes.html
@@ -28,6 +28,8 @@
 </ul>
 
 <h3> <a href=https://aws.amazon.com/augmented-ai/> Amazon Augmented AI (Amazon A2I) </a></h3>
+<p><img src="Warren_Barkley.jpeg" alt="Warren_Barkley IMG" style="width:130px;height:130px;"> <img src="morgan_dutton.jpeg" alt="morgan_dutton IMG" style="width:130px;height:130px;"></p>
+
 <ul>
   <li>Warren Barkley, General Manager for Amazon A2I</li>
   <li>Morgan Dutton is a Program Manager for Amazon A2I</li>
