--- a/aaai-2020/keynotes.html
+++ b/aaai-2020/keynotes.html
@@ -27,13 +27,7 @@
 <li> <b>Title:</b> Reproducibility in AI </li>
 </ul>
 
-<h3> <a href=https://aws.amazon.com/augmented-ai/> Amazon Augmented AI (Amazon A2I) </a></h3>
-<p><img src="Warren_Barkley.jpeg" alt="Warren_Barkley IMG" style="width:130px;height:130px;"> <img src="morgan_dutton.jpeg" alt="morgan_dutton IMG" style="width:130px;height:130px;"></p>
-
-<ul>
-  <li>Warren Barkley, General Manager for Amazon A2I</li>
-  <li>Morgan Dutton is a Program Manager for Amazon A2I</li>
-</ul>
+<h3> <a href=https://aws.amazon.com/augmented-ai/> Sam Henry, Senior SDM, Amazon Augmented AI (Amazon A2I)</a></h3>
 <ul>
 <li> <b>Title:</b> People + AI = Magic </li>
 <li> <b>Abstract:</b> We will share new innovations in machine learning accuracy and the importance of maintaining people in the loop for AI applications. Many machine learning solutions require humans to review low confidence inference for accuracy, audit or compliance. We will demonstrate new mechanisms for bringing nuanced human inputs into the ML workflow which will enable sectors which had previously relied solely on humans or could not use ML at all.</li>
