--- a/aaai-2020/program.html
+++ b/aaai-2020/program.html
@@ -14,7 +14,7 @@
 <h2> Program </h2>
 <ul>
 <li>9:15 - 9:30 Intro</li>
-  <li><b>9:30 - 10:30 Invited Talk: <a href=http://eval.how/aaai-2020/keynotes.html>Anna Rogers</a></b></li> 
+  <li><b>9:30 - 10:30 Invited Talk: <a href=http://eval.how/aaai-2020/keynotes.html>Anna Rogers: The questions that the current AI can't answer.</a></b></li> 
 <li>10:30 - 11:00 Coffee Break</li>
   <li><b>11:00 - 12:00 Paper Session 1</b></li>
 <ul>
@@ -23,14 +23,14 @@
 <li>11:30 - 11:45: Azamat Kamzin, Prajwal Paudyal, Ayan Banerjee and Sandeep K.S. Gupta: <b><a href=http://eval.how/aaai-2020/REAIS19_p13.pdf>Evaluating the gap between hype and performance of AI systems</a></b></li>
 <li>11:45 - 12:00: Chris Welty, Praveen Paritosh, Lora Aroyo: <b><a href=https://arxiv.org/abs/1911.01875>Metrology for AI: From Benchmarks to Instruments</a></b></li>
 </ul>
-  <li><b>12:00 - 13:00 Invited Talk: <a href=http://eval.how/aaai-2020/keynotes.html>Odd Erik Gunderson, Reproducibility in AI </a></b></li>
+  <li><b>12:00 - 13:00 Invited Talk: <a href=http://eval.how/aaai-2020/keynotes.html>Odd Erik Gunderson: Reproducibility in AI </a></b></li>
 <li>13:00 - 14:00 Lunch</li>
   <li><b>14:00 - 14:30 Paper Session 2</b></li>
 <ul>
 <li>14:00 - 14:15: Botty Dimanov, Umang Bhatt, Mateja Jamnik and Adrian Weller: <b><a href=http://eval.how/aaai-2020/REAIS19_p7.pdf>You Shouldn't Trust Me: Learning Models Which Conceal Unfairness From Multiple Explanation Methods</a></b></li>	
 <li>14:15 - 14:30: Inioluwa Raji and Genevieve Fried: <b><a href=http://eval.how/aaai-2020/REAIS19_p12.pdf>About Face: Tracking Shifting Trends of Facial Recognition Evaluation</a></b></li>
 </ul>
-  <li><b>14:30 - 15:30 Invited Talk: <a href=http://eval.how/aaai-2020/keynotes.html>Sam Henry, Senior SDM, Amazon Augmented AI (Amazon A2I)- People + AI = Magic</a></b></li>
+  <li><b>14:30 - 15:30 Invited Talk: <a href=http://eval.how/aaai-2020/keynotes.html>Sam Henry, Amazon Augmented AI: People + AI = Magic</a></b></li>
 <li>15:30 - 16:00 Coffee break (Town Hall meeting)</li>
   <li><b>16:00 - 16:45 Paper Session 3</b></li>
 <ul>
