--- a/aaai-2020/keynotes.html
+++ b/aaai-2020/keynotes.html
@@ -28,6 +28,8 @@
 </ul>
 
 <h3> <a href=https://aws.amazon.com/augmented-ai/> Sam Henry, Senior SDM, Amazon Augmented AI (Amazon A2I)</a></h3>
+<p><img src="samhenry.jpg" alt="Sam Henry IMG" style="width:130px;height:130px;"></p>
+
 <ul>
 <li> <b>Title:</b> People + AI = Magic </li>
 <li> <b>Abstract:</b> We will share new innovations in machine learning accuracy and the importance of maintaining people in the loop for AI applications. Many machine learning solutions require humans to review low confidence inference for accuracy, audit or compliance. We will demonstrate new mechanisms for bringing nuanced human inputs into the ML workflow which will enable sectors which had previously relied solely on humans or could not use ML at all.</li>
