--- a/aaai-2020/keynotes.html
+++ b/aaai-2020/keynotes.html
@@ -24,7 +24,7 @@
 <p><img src="odderik.jpg" alt="Odd Erik Gunderson IMG" style="width:130px;height:130px;"></p>
 
 <ul>
-<li> <b>Title:</b> Reproducibility in AI </li>
+<li> <b>Title:</b> How can we know it is shoulders we stand on? - Reproducibility and Evaluation </li>
 </ul>
 
 <h3> <a href=https://aws.amazon.com/augmented-ai/> Sam Henry, Senior SDM, Amazon Augmented AI (Amazon A2I)</a></h3>
