--- a/aaai-2020/program.html
+++ b/aaai-2020/program.html
@@ -26,7 +26,7 @@
 <li>11:45 - 12:00: Chris Welty, Praveen Paritosh, Lora Aroyo: <b><a href=https://arxiv.org/abs/1911.01875>Metrology for AI: From Benchmarks to Instruments</a></b></li>
 </ul>
   <br>
-  <li><b>12:00 - 13:00 Invited Talk: <a href=http://eval.how/aaai-2020/keynotes.html>Odd Erik Gunderson: Reproducibility in AI </a></b></li>
+  <li><b>12:00 - 13:00 Invited Talk: <a href=http://eval.how/aaai-2020/keynotes.html>Odd Erik Gunderson: How can we know it is shoulders we stand on? - Reproducibility and Evaluation </a></b></li>
 <br>
   <li>13:00 - 14:00 Lunch</li>
  <br> 
