--- a/aaai-2020/program.html
+++ b/aaai-2020/program.html
@@ -13,7 +13,7 @@
 
 <h2> Program </h2>
 <ul>
-<li>9:15 - 9:30 Intro</li>
+<li>9:15 - 9:30 Introduction: Praveen Paritosh</li>
   <li><b>9:30 - 10:30 Invited Talk: <a href=http://eval.how/aaai-2020/keynotes.html>Anna Rogers: The questions that the current AI can't answer.</a></b></li> 
 <br>
   <li>10:30 - 11:00 Coffee Break</li>
