--- a/hcomp2020/index.html
+++ b/hcomp2020/index.html
@@ -13,16 +13,12 @@
 
 <h2> <a href=http://eval.how/dew-2020/program.html> Program </a></h2>
 <h2> <a href=http://eval.how/dew-2020/keynotes.html> Keynotes </a></h2>
+<h2> <a href="https://easychair.org/conferences/?conf=dew2020"> Submission Link </a></h2>
 
 <h2> Important Dates </h2>
 <p><b> Submission Deadline: September 5, 2020 </b></p>
 <p><b> Notification of acceptance: September 25, 2020 </b></p>
 <p><b> Final camera-ready papers due: October 12, 2020 </b></p>
-
-<h2> Submission </h2>
-<p><a href="https://easychair.org/cfp/dew2020"> Call for papers </a></p>
-<p><a href="https://easychair.org/conferences/?conf=dew2020"> Submission Link </a></p>
-
 
 <h2> Topics of Interest </h2>
 We invite scientific contributions and positions papers on the following topics: 
