Updated contact email for DEW 2020 to data-excellence@googlegroups.com

--- a/dew2020/index.html
+++ b/dew2020/index.html
@@ -357,9 +357,9 @@
             </div>
         </div>
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <a href="mailto:data_excellence@googlegroups.com">
+                <a href="mailto:data-excellence@googlegroups.com">
                 <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p>data_excellence@googlegroups.com</p>
+                    <p>data-excellence@googlegroups.com</p>
                 </a>
             </div>
         </div>
